fix invisible buttons in password fields (#2020)

--- a/style/themes/lcars.css
+++ b/style/themes/lcars.css
@@ -1754,6 +1754,14 @@ input[type="number"]::-webkit-outer-spin-button {
   margin: 0;
 }
 
+input[type="password"]::-webkit-credentials-auto-fill-button {
+  background: white;
+}
+
+input[type="password"]::-webkit-caps-lock-indicator {
+  filter: invert(100%);
+}
+
 /*** ----------------------------------------------------- ***/
 .not-used {
   background-color: #222;
